feature: add endpoint to find task
