# internal/infra/web/technician_handler.go
@@ -151,3 +151,64 @@ func (a *TechnicianHandler) UpdateTask(w http.ResponseWriter, r *http.Request) {
 
 	presenter.JSONPresenter(w, http.StatusCreated, output, nil)
 }
+
+// FindTask godoc
+// @Summary find task.
+// @Description find task.
+// @Tags Technician
+// @Accept */*
+// @Produce json
+// @Param task_id query string true "task id"
+// @Success 201 {object} usecase.TechnicianFindTaskOutputDTO
+// @Failure 400 {string} {object} "invalid request"
+// @Failure 401 {string} {object} "unauthorized"
+// @Failure 404 {string} {object} "not found"
+// @Failure 500 {string} string "internal server error"
+// @Security ApiKeyAuth
+// @Router /technician/task/{task_id} [get]
+func (a *TechnicianHandler) FindTask(w http.ResponseWriter, r *http.Request) {
+	claims, ok := r.Context().Value(middlewarepkg.AuthKey{}).(*jwtpkg.UserClaims)
+	if !ok {
+		presenter.JSONPresenter(w, http.StatusInternalServerError, nil, invalidTokenClaimsErr)
+		return
+	}
+
+	userID := claims.UserID
+	if userID == 0 {
+		presenter.JSONPresenter(w, http.StatusInternalServerError, nil, invalidTokenClaimsErr)
+		return
+	}
+
+	taskID := r.URL.Query().Get("task_id")
+	if taskID == "" {
+		presenter.JSONPresenter(w, http.StatusBadRequest, nil, errorpkg.NotFoundError)
+		return
+	}
+
+	tID, err := strconv.Atoi(taskID)
+	if err != nil {
+		presenter.JSONPresenter(w, http.StatusBadRequest, nil, errorpkg.ParseJsonError)
+		return
+	}
+
+	var input usecase.TechnicianFindTaskInputDTO
+	input.ID = tID
+
+	invalidFields, isFailure := a.validator.Validate(input)
+	if isFailure {
+		presenter.JSONPresenter(w, http.StatusBadRequest, invalidFields, errorpkg.ValidateFieldsError)
+		return
+	}
+
+	uc := usecase.TechnicianFindTaskUseCase{
+		TechnicianRepository: a.technicianRepository,
+	}
+
+	output, appError := uc.Execute(input, userID)
+	if appError != nil {
+		presenter.JSONPresenter(w, appError.StatusCode, nil, appError)
+		return
+	}
+
+	presenter.JSONSingleResPresenter(w, http.StatusOK, output, nil)
+}
